testsuite/poke.pkl/strcons-diag-1.pk
/* { dg-do compile } */

var s
    = string (); /* { dg-error "argument" } */
